mi tercer commit

--- a/archivo3.html
+++ b/archivo3.html
@@ -6,9 +6,9 @@
     <title>Mi Página Web</title>
 </head>
 <body>
-    <h1>Bienvenido a Mi Página Web</h1>
+    <h1>Welcom to my site web</h1>
     </h2>
-    Este proceso sera para la creación de commit's
+    This proces is for this creation of commits
     </h2>
 
 </body>
