Este es mi segundo commit

--- a/titulo_git.html
+++ b/titulo_git.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Bienvenido a Mi Página Web</h1>
     </h2>
-    Este proceso sera para la creación de commit's
+    Este proceso sera para la creación de commit's.
     </h2>
 
 </body>
