Se agrego una linea de codigo al archivo titulo_git

--- a/titulo_git.html
+++ b/titulo_git.html
@@ -11,5 +11,7 @@
     Este proceso sera para la creación de commit's.
     </h2>
 
+    echo '<img src=""D:\ProyectoGIT\1.jpg"" alt="Descripción de la imagen">';
+    
 </body>
 </html>
